src/train_target_1.log
nohup: ignoring input
  File "/workspace/src/train_pertkge.py", line 123
    apt-get update
            ^^^^^^
SyntaxError: invalid syntax
